--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,9 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then source activate test-environment; fi
 
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then conda install numpy scipy matplotlib pip pytest; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz boost-python; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install boost --with-python; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install boost-python; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install -U pytest; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git clone --depth=10 git://github.com/thrust/thrust.git; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cd thrust; fi
