--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ install:
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install http://prdownloads.sourceforge.net/gnuplot-py/gnuplot-py-1.8.tar.gz?download; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install gnuplot; fi
 
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew pyenv; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install pyenv; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv install 2.7.10; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv global 2.7.10; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz boost-python; fi
