--- a/.travis.yml
+++ b/.travis.yml
@@ -57,12 +57,13 @@ install:
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install http://prdownloads.sourceforge.net/gnuplot-py/gnuplot-py-1.8.tar.gz?download; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install gnuplot; fi
 
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install pyenv; fi
+#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install pyenv; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv install 2.7.10; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv global 2.7.10; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then echo $PYTHONPATH; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHONPATH=/Users/travis/.pyenv/versions/2.7.10:$PYTHONPATH; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then echo $PYTHONPATH; fi
+    #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv global 2.7.10; fi
+    #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHONPATH=/Users/travis/.pyenv/versions/2.7.10:$PYTHONPATH; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHON_EXECUTABLE=/Users/travis/.pyenv/versions/2.7.10/bin/python; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHON_INCLUDE_DIR=/Users/travis/.pyenv/versions/2.7.10/include/python2.7.10; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHON_LIBRARY=/Users/travis/.pyenv/versions/2.7.10/lib/libpython2.7.10.a; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz boost-python; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install -U pytest; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git clone --depth=10 git://github.com/thrust/thrust.git; fi
