--- a/.travis.yml
+++ b/.travis.yml
@@ -47,15 +47,6 @@ install:
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install homebrew/versions/boost159 --with-python; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install homebrew/versions/boost-python159; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew link --force boost159; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew link --force boost-python159; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git clone --depth=10 git://github.com/thrust/thrust.git; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cd thrust; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git checkout 2f9ae5762cc05c8421887a5318b2f4ecc8652044; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cd ../; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo ln -s `pwd`/thrust/thrust /usr/local/include/thrust; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install http://prdownloads.sourceforge.net/gnuplot-py/gnuplot-py-1.8.tar.gz?download; fi
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install gnuplot; fi
 
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install pyenv; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv install 2.7.10; fi
@@ -85,8 +76,7 @@ script:
     - mkdir build 
     - cd build
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ../; fi # Travis default is not the packaged one
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cmake -DPYTHON_LIBRARY=/Users/travis/.pyenv/versions/2.7.10/lib/libpython2.7.10.a ../; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cmake -DPYTHON_INCLUDE_DIR=/Users/travis/.pyenv/versions/2.7.10/include/python2.7.10 ../; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cmake -DPYTHON_LIBRARY=/Users/travis/.pyenv/versions/2.7.10/lib/libpython2.7.10.a -DPYTHON_EXECUTABLE=/Users/travis/.pyenv/versions/2.7.10/bin/python -DPYTHON_INCLUDE_DIR=/Users/travis/.pyenv/versions/2.7.10/include/python2.7.10 ../; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHON_EXECUTABLE=/Users/travis/.pyenv/versions/2.7.10/bin/python; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHON_INCLUDE_DIR=/Users/travis/.pyenv/versions/2.7.10/include/python2.7.10; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHON_LIBRARY=/Users/travis/.pyenv/versions/2.7.10/lib/libpython2.7.10.a; fi
