--- a/.travis.yml
+++ b/.travis.yml
@@ -48,12 +48,9 @@ install:
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install homebrew/versions/boost-python159; fi
 #    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew link --force boost159; fi
 
-#    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install pyenv; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv install 2.7.10; fi
-    #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then pyenv global 2.7.10; fi
-    #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PYTHONPATH=/Users/travis/.pyenv/versions/2.7.10:$PYTHONPATH; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew install blitz boost-python; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install -U pytest; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install -U pytest numpy scipy matplotlib; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git clone --depth=10 git://github.com/thrust/thrust.git; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cd thrust; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git checkout 2f9ae5762cc05c8421887a5318b2f4ecc8652044; fi
