--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ script:
     - sudo make install
     - cd ../../..
 
-    ## icicle (no tests - just checking if any changes in libmpdata's API did not break compilation of icicle)
+    ## icicle
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install libboost-program-options-dev; fi
     - cd libcloudphxx/tests/paper_GMD_2015
     - mkdir build 
@@ -81,7 +81,8 @@ script:
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ../; fi # Travis default is not the packaged one
     - cmake -DCMAKE_BUILD_TYPE=Release ../ 
     - if [[ $CXX == 'clang++' ]]; then make; fi # disable compilation on the CUDA machine with g++ - it has not enough memory to compile icicle
-    - cd ../../../..
+    - if [[ $CXX == 'clang++' ]]; then ctest -R travis; fi # compare icicle results against reference data 
+    - cd ../../../..                                       # (done for full simulation for bulk schemes and a couple of steps for lagrangian)
 
     ## drops.py (it is written in Python so no compilation, just unit tests)
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-h5py; fi 
