--- a/tests/paper_GMD_2015/tests/fig_a/CMakeLists.txt
+++ b/tests/paper_GMD_2015/tests/fig_a/CMakeLists.txt
@@ -53,34 +53,51 @@ add_test(travis_calc_lgrngn travis_calc_lgrngn ${CMAKE_BINARY_DIR})
 add_test(travis_2D_kin_cloud_dims_blk bash -c "
   for dir in out_blk_1m out_blk_2m; do
     echo 'comparing const.h5'
-    if h5diff $dir/const.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/out_lgrngn/travis_const.h5 | grep 'not comparable'; then
-      echo 'I should Fail'
+    if h5diff $dir/const.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/const.h5 | grep 'not comparable'; then
+      echo 'the subsequent diff test will not detect differences -- Fail'
       exit 1      
     else          # If h5diff encounters files that cannot be compared (for example with different dimesions)
-      echo 'I should Pass'
+      echo 'OK'
       exit 0      # it does not return exit 1. Instead it prints out a warning that 'Some files are not comparable'
     fi
   done
 ")
 
-add_test(travis_2D_kin_cloud_diff_blk bash -c "
+add_test(travis_2D_kin_cloud_diff_blk_common bash -c "
   for dir in out_blk_1m out_blk_2m; do
     echo 'comparing const.h5'
-    h5diff --delta=2e-7 -v    $dir/const.h5                ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/const.h5               &&
-    echo 'comparing timestep0000000000.h5'                                                                                 &&
-    h5diff --relative=1e-5 -v $dir/timestep0000000000.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  &&
-    echo 'comparing timestep0000009000.h5'                                                                                 &&
-    h5diff --relative=1e-5 -v $dir/timestep0000009000.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000009000.h5  || exit 1;
+    h5diff --delta=2e-7 -v    $dir/const.h5                ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/const.h5                   &&
+    echo 'comparing timestep0000000000.h5'                                                                                     &&
+    h5diff --relative=0.04  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /rc  &&
+    h5diff --relative=1e-5  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /rr  &&
+    h5diff --relative=0.002 -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /rv  &&
+    h5diff --relative=1e-4  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /th  &&
+    echo 'comparing timestep0000009000.h5'                                                                                     &&
+    h5diff --relative=0.04  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /rc  &&
+    h5diff --relative=1e-5  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /rr  &&
+    h5diff --relative=0.002 -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /rv  &&
+    h5diff --relative=1e-4  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /th  || exit 1;
+  done  
+")
+
+add_test(travis_2D_kin_cloud_diff_blk_2m bash -c "
+  for dir in out_blk_2m; do
+    echo 'comparing timestep0000000000.h5'                                                                                     &&
+    h5diff --relative=1e-9  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /nc  &&
+    h5diff --relative=1e-9  -v $dir/timestep0000000000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000000000.h5  /nr  &&
+    echo 'comparing timestep0000009000.h5'                                                                                     &&
+    h5diff --relative=1e-9  -v $dir/timestep0000009000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000009000.h5  /nc  &&
+    h5diff --relative=1e-9  -v $dir/timestep0000009000.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/timestep0000009000.h5  /nr  || exit 1;
   done  
 ")
 
 add_test(travis_2D_kin_cloud_dims_lgrngn bash -c "
     echo 'comparing dimensions in const.h5'
-    if h5diff out_lgrngn/const.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/out_lgrngn/travis_const.h5 | grep 'not comparable'; then
-      echo 'I should Fail'
+    if h5diff out_lgrngn/const.h5 ${CMAKE_CURRENT_SOURCE_DIR}/refdata/out_blk_1m/const.h5 | grep 'not comparable'; then
+      echo 'the subsequent diff test will not detect differences -- Fail'
       exit 1      
     else          # If h5diff encounters files that cannot be compared (for example with different dimesions)
-      echo 'I should Pass'
+      echo 'OK'
       exit 0      # it does not return exit 1. Instead it prints out a warning that 'Some files are not comparable'.
     fi
 ")
@@ -88,10 +105,14 @@ add_test(travis_2D_kin_cloud_dims_lgrngn bash -c "
 add_test(travis_2D_kin_cloud_diff_lgrngn bash -c "
   for dir in out_lgrngn; do
     echo 'comparing const.h5'
-    h5diff --delta=2e-7 -v    $dir/const.h5                ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_const.h5                 &&
-    echo 'comparing timestep0000000000.h5'                                                                                          &&
-    h5diff --relative=1e-5 -v $dir/timestep0000000000.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000000.h5    &&
-    echo 'comparing timestep0000000020.h5'                                                                                          &&
-    h5diff --relative=1e-5 -v $dir/timestep0000000020.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000020.h5    || exit 1;
+    h5diff --delta=2e-7 -v    $dir/const.h5                ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_const.h5                       &&
+    echo 'comparing timestep0000000000.h5'                                                                                                &&
+    h5diff --relative=1e-9 -v $dir/timestep0000000000.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000000.h5 /th      &&
+    h5diff --relative=1e-9 -v $dir/timestep0000000000.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000000.h5 /rv      &&
+    h5diff --relative=1e-9 -v $dir/timestep0000000000.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000000.h5 /sd_conc &&
+    echo 'comparing timestep0000000020.h5'                                                                                                &&
+    h5diff --relative=1e-9 -v $dir/timestep0000000020.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000020.h5 /th      &&
+    h5diff --relative=1e-9 -v $dir/timestep0000000020.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000020.h5 /rv      &&
+    h5diff --relative=1e-9 -v $dir/timestep0000000020.h5   ${CMAKE_CURRENT_SOURCE_DIR}/refdata/$dir/travis_timestep0000000020.h5 /sd_conc || exit 1;
   done  
 ")
