print a few things

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,10 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then echo 'import sys; sys.path.insert(1, "/usr/local/lib/python2.7/site-packages")' >> /Users/travis/Library/Python/2.7/lib/python/site-packages/homebrew.pth; fi
 
 script:
+    - python-config --prefix
+    - python-config --includes
+    - python-config --exec-prefix
+    - python-config --ldflags
     # libcloudph++ 
     - mkdir build 
     - cd build
