--- a/.travis.yml
+++ b/.travis.yml
@@ -76,8 +76,10 @@ script:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then git clone --depth=1 https://github.com/dstahlke/gnuplot-iostream.git; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo ln -s `pwd`/gnuplot-iostream/gnuplot-iostream.h /usr/local/include/gnuplot-iostream.h; fi
 
-    - git clone --depth=1 git://github.com/igfuw/libmpdataxx.git
+    #- git clone --depth=1 git://github.com/igfuw/libmpdataxx.git
+    - git clone git://github.com/mwarusz/libmpdataxx.git
     - cd libmpdataxx/libmpdata++
+    - git checkout osx_python
     - mkdir build
     - cd build
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ..; fi # Travis default is not the packaged one
