--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then wget https://raw.githubusercontent.com/Kitware/CMake/master/Modules/FindBoost.cmake; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo mv FindBoost.cmake /usr/local/Cellar/cmake/3.6.2/share/cmake/Modules/; fi
 
-before script:
+before_script:
     - chmod +x ./travis_scripts/*
 
 script:
