call all travis scripts with '. script'

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,10 +55,10 @@ before_script:
     - chmod +x ./.travis_scripts/*
 
 script:
-    - if [[ $TEST_SUITE == 'cuda' ]]; then ./.travis_scripts/cuda.sh; fi
-    - if [[ $TEST_SUITE == 'tests' ]]; then ./.travis_scripts/tests.sh; fi
-    - if [[ $TEST_SUITE == 'parcel' ]]; then ./.travis_scripts/parcel.sh; fi
-    - if [[ $TEST_SUITE == 'icicle' ]]; then ./.travis_scripts/icicle.sh; fi
+    - if [[ $TEST_SUITE == 'cuda' ]]; then . ./.travis_scripts/cuda.sh; fi # called like that to pass env vars
+    - if [[ $TEST_SUITE == 'tests' ]]; then . ./.travis_scripts/tests.sh; fi
+    - if [[ $TEST_SUITE == 'parcel' ]]; then . ./.travis_scripts/parcel.sh; fi
+    - if [[ $TEST_SUITE == 'icicle' ]]; then . ./.travis_scripts/icicle.sh; fi
     - if [[ $TEST_SUITE == 'bicycles' ]]; then . ./.travis_scripts/bicycles.sh; fi
 
 
