--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,10 +191,10 @@ endif()
 add_subdirectory(src) 
 
 enable_testing()
-#add_subdirectory(tests)
+add_subdirectory(tests)
 
 add_subdirectory(include) 
-#add_subdirectory(bindings) 
+add_subdirectory(bindings) 
 
 install(
   FILES
